--- a/index.html
+++ b/index.html
@@ -100,9 +100,8 @@
                 <img src="./assets/img/logo.png" width = "350em" height = "150em" alt="">
             </div>
             <div class="textoInicio">
-                <p>fjhaskfjhsakufgaskpfuasikufgsa
-                fasojifjhaoifjasiofasfasfasdsfsa1
-                fasfasfasfsafasfsafasfasfasfasfsa
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing
+                lit. Magni numquam reprehenderit officia laborum fugiat voluptates, ullam autem ratione vel, ducimus aliquid! Inventore ipsum, rerum doloremque et odio sed maxime ex!
                 </p>
                 
             </div>
