--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </div>
             <div class="textoInicio">
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing
-                lit. Magni numquam reprehenderit officia laborum fugiat voluptates, ullam autem ratione vel, ducimus aliquid! Inventore ipsum, rerum doloremque et odio sed maxime ex!
+                lit. Magfasfasfani numquam reprehenderit officia laborum fugiat voluptates, ullam autem ratione vel, ducimus aliquid! Inventore ipsum, rerum doloremque et odio sed maxime ex!
                 </p>
                 
             </div>
