--- a/pages/muestrario.html
+++ b/pages/muestrario.html
@@ -35,30 +35,33 @@
     </header>
 
     <main>
-        <div class="galeria">
+        <div id="galeria">
             <div  class="g-img-1">
-                <img src="../assets/img/galeria 1.jpg" alt="" width="100%" height="100%">
+                <img src="../assets/img/galeria 1.jpg" alt="">
             </div>
             <div  class="g-img-2">
-                <img src="../assets/img/galeria 2.jpg" alt="" width="100%" height="100%">
+                <img src="../assets/img/galeria 2.jpg" alt="">
             </div>
             <div  class="g-img-3">
-                <img src="../assets/img/galeria 3.jpg" alt="" width="100%" height="100%">
+                <img src="../assets/img/galeria 3.jpg" alt="">
             </div>
             <div  class="g-img-4">
-                <img src="../assets/img/galeria 4.jpg" alt="" width="100%" height="100%">
+                <img src="../assets/img/galeria 4.jpg" alt="">
             </div>
             <div  class="g-img-5">
-                <img src="../assets/img/galeria 5.jpg" alt="" width="100%" height="100%">
+                <img src="../assets/img/galeria 5.jpg" alt="">
             </div>
             <div  class="g-img-6">
-                <img src="../assets/img/galeria 6.jpg" alt="" width="100%" height="100%">
+                <img src="../assets/img/galeria 6.jpg" alt="">
             </div>
             <div  class="g-img-7">
-                <img src="../assets/img/galeria 7.jpg" alt="" width="100%" height="100%">
+                <img src="../assets/img/galeria 7.jpg" alt="">
             </div>
             <div  class="g-img-8">
-                <img src="../assets/img/galeria 8.jpg" alt="" width="100%" height="100%">
+                <img src="../assets/img/galeria 8.jpg" alt="">
+            </div>
+            <div  class="g-img-9">
+                <img src="../assets/img/galeria 9.jpg" alt="">
             </div>
 
         </div>
