galeria en muestrario

--- a/pages/muestrario.html
+++ b/pages/muestrario.html
@@ -36,33 +36,15 @@
 
     <main>
         <div id="galeria">
-            <div  class="g-img-1">
-                <img src="../assets/img/galeria 1.jpg" alt="">
-            </div>
-            <div  class="g-img-2">
-                <img src="../assets/img/galeria 2.jpg" alt="">
-            </div>
-            <div  class="g-img-3">
-                <img src="../assets/img/galeria 3.jpg" alt="">
-            </div>
-            <div  class="g-img-4">
-                <img src="../assets/img/galeria 4.jpg" alt="">
-            </div>
-            <div  class="g-img-5">
-                <img src="../assets/img/galeria 5.jpg" alt="">
-            </div>
-            <div  class="g-img-6">
-                <img src="../assets/img/galeria 6.jpg" alt="">
-            </div>
-            <div  class="g-img-7">
-                <img src="../assets/img/galeria 7.jpg" alt="">
-            </div>
-            <div  class="g-img-8">
-                <img src="../assets/img/galeria 8.jpg" alt="">
-            </div>
-            <div  class="g-img-9">
-                <img src="../assets/img/galeria 9.jpg" alt="">
-            </div>
+                <img src="../assets/img/galeria 1.jpg" alt="galeria 1" class="g-img-1">
+                <img src="../assets/img/galeria 2.jpg" alt="galeria 2" class="g-img-2">
+                <img src="../assets/img/galeria 3.jpg" alt="galeria 3" class="g-img-3">
+                <img src="../assets/img/galeria 4.jpg" alt="galeria 4" class="g-img-4">
+                <img src="../assets/img/galeria 5.jpg" alt="galeria 5" class="g-img-5">
+                <img src="../assets/img/galeria 6.jpg" alt="galeria 6" class="g-img-6">
+                <img src="../assets/img/galeria 7.jpg" alt="galeria 7" class="g-img-7">
+                <img src="../assets/img/galeria 8.jpg" alt="galeria 8" class="g-img-8">
+                <img src="../assets/img/galeria 9.jpg" alt="galeria 9" class="g-img-9">
 
         </div>
     </main>
