muestrario terminado + responsib

--- a/pages/muestrario.html
+++ b/pages/muestrario.html
@@ -7,7 +7,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/styles.css">
-    <title>Document</title>
+    <title>muestrario</title>
 </head>
 <body>
     <header>
@@ -35,18 +35,21 @@
     </header>
 
     <main>
-        <div id="galeria">
+        <section class="mainMuestrario">
+            <h1 class="tituloMuestrario">Muestrario</h1>
+            <div id="galeria">
                 <img src="../assets/img/galeria 1.jpg" alt="galeria 1" class="g-img-1">
                 <img src="../assets/img/galeria 2.jpg" alt="galeria 2" class="g-img-2">
                 <img src="../assets/img/galeria 3.jpg" alt="galeria 3" class="g-img-3">
-                <img src="../assets/img/galeria 4.jpg" alt="galeria 4" class="g-img-4">
+                <div class="g-img-4">  
+                </div> 
                 <img src="../assets/img/galeria 5.jpg" alt="galeria 5" class="g-img-5">
                 <img src="../assets/img/galeria 6.jpg" alt="galeria 6" class="g-img-6">
                 <img src="../assets/img/galeria 7.jpg" alt="galeria 7" class="g-img-7">
                 <img src="../assets/img/galeria 8.jpg" alt="galeria 8" class="g-img-8">
                 <img src="../assets/img/galeria 9.jpg" alt="galeria 9" class="g-img-9">
-
-        </div>
+            </div>
+        </section>
     </main>
 
     <footer>
