responsiv el muestrario y muestrario index, progreso en pg tela

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/styles.css">
     <title>Moon of rome - Inicio</title>
     
@@ -26,7 +27,7 @@
                 </li>
                 <div>
                     <a class="logoInicio" href="#" >
-                        <img src="./assets/img/logo.png" width = "150em" height = "50em" alt="">
+                        <img src="./assets/img/logo.png" width = "250em"alt="">
                     </a>
                 </div>
                 <li><a href="./pages/contacto.html">Contacto</a></li>
@@ -67,29 +68,29 @@
 
         <h2 class="productosIndex">Productos realizados</h2>
 
-        <section class="muestraInicio">
+        <section id="muestraInicio" class="container">
             <div>
-                <div class="muestra" data-aos="flip-left" data-aos-duration="2000">
-                    <img src="./assets/img/11.jpeg" width = "300" height = "300" alt="">
+                <div class="muestra" data-aos="zoom-in" data-aos-duration="800">
+                    <img src="./assets/img/11.jpeg">
                 </div>
-                <div class="muestra" data-aos="flip-left" data-aos-duration="2000">
-                    <img src="./assets/img/22.jpeg" width = "300" height = "300" alt="">
+                <div class="muestra" data-aos="zoom-in" data-aos-duration="800">
+                    <img src="./assets/img/22.jpeg">
                 </div>
             </div>
             <div>
-                <div class="muestra" data-aos="flip-left" data-aos-duration="2000">
-                    <img src="./assets/img/33.jpeg" width = "300" height = "300" alt="">
+                <div class="muestra" data-aos="zoom-in" data-aos-duration="800">
+                    <img src="./assets/img/33.jpeg">
                 </div>
-                <div class="muestra" data-aos="flip-left" data-aos-duration="2000">
-                    <img src="./assets/img/44.jpeg" width = "300" height = "300" alt="">
+                <div class="muestra" data-aos="zoom-in" data-aos-duration="00">
+                    <img src="./assets/img/44.jpeg">
                 </div>
             </div>
             <div>
-                <div class="muestra" data-aos="flip-left" data-aos-duration="2000">
-                    <img src="./assets/img/55.jpeg" width = "300" height = "300" alt="">
+                <div class="muestra" data-aos="zoom-in" data-aos-duration="800">
+                    <img src="./assets/img/55.jpeg">
                 </div>
-                <div class="muestra" data-aos="flip-left" data-aos-duration="2000">
-                    <img src="./assets/img/66.jpeg" width = "300" height = "300" alt="">
+                <div class="muestra" data-aos="zoom-in" data-aos-duration="800">
+                    <img src="./assets/img/66.jpeg">
                 </div>
             </div>
         </section>
@@ -130,9 +131,8 @@
         </div>
     </footer>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
-    <script src="./js/bootstrap.min.js"></script>
+    <script> AOS.init(); </script>
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
