media queri index y muestrario - grid en index

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
 </head>
 <body>
-    <header>
+    <header class="container">
         <nav>
             <ul class="menu-horizontal">
                 <li><a href="./pages/muestrario.html">Muestrario</a></li>
@@ -35,9 +35,6 @@
             </ul>
         </nav>
     </header>
-
-
-
     <main>
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
                 <div class="carousel-indicators">
@@ -65,38 +62,35 @@
                     <span class="visually-hidden">Next</span>
                 </button>
         </div>
-
         <h2 class="productosIndex">Productos realizados</h2>
-
-        <section id="muestraInicio" class="container">
-            <div>
-                <div class="muestra" data-aos="zoom-in" data-aos-duration="800">
-                    <img src="./assets/img/11.jpeg">
+        <section  id="muestraInicio"  class="container">
+            <div class="galeriaInicio">
+                <div class="muestra">
+                    <a href="./pages/muestrario.html"><img src="./assets/img/11.jpeg" class="img1"></a>
                 </div>
-                <div class="muestra" data-aos="zoom-in" data-aos-duration="800">
-                    <img src="./assets/img/22.jpeg">
+                <div class="muestra">
+                    <a href="./pages/muestrario.html"><img src="./assets/img/22.jpeg" class="img2"></a>
                 </div>
-            </div>
-            <div>
-                <div class="muestra" data-aos="zoom-in" data-aos-duration="800">
-                    <img src="./assets/img/33.jpeg">
+                <div class="muestra">
+                    <a href="./pages/muestrario.html"><img src="./assets/img/33.jpeg" class="img3"></a>
                 </div>
-                <div class="muestra" data-aos="zoom-in" data-aos-duration="00">
-                    <img src="./assets/img/44.jpeg">
+                <div class="muestra">
+                    <a href="./pages/muestrario.html"><img src="./assets/img/44.jpeg" class="img4"></a>
                 </div>
-            </div>
-            <div>
-                <div class="muestra" data-aos="zoom-in" data-aos-duration="800">
-                    <img src="./assets/img/55.jpeg">
+                <div class="muestra">
+                    <a href="./pages/muestrario.html"><img src="./assets/img/55.jpeg" class="img5"></a>
                 </div>
-                <div class="muestra" data-aos="zoom-in" data-aos-duration="800">
-                    <img src="./assets/img/66.jpeg">
+                <div class="muestra">
+                    <a href="./pages/muestrario.html"><img src="./assets/img/66.jpeg" class="img6"></a>
+                </div>
+                <div class="verMas">
+                    <a href="./pages/muestrario.html">Ver mas</a>
                 </div>
             </div>
         </section>
 
 
-        <section class="infoInicio">
+        <article id="infoInicio" class="container">
             <div class="imgInicio">
                 <img src="./assets/img/logo.png" width = "350em" height = "150em" alt="">
             </div>
@@ -106,10 +100,9 @@
                 </p>
                 
             </div>
-        </section>
+        </article>
     </main>
-
-    <footer>
+    <footer class="container">
         <div class="redes">
             <a href="https://www.instagram.com/moon_of_rome/" target="_blank">
                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#BC4C2A" class="bi bi-instagram" viewBox="0 0 16 16">
