--- a/pages/muestrario.html
+++ b/pages/muestrario.html
@@ -11,7 +11,7 @@
     <title>muestrario</title>
 </head>
 <body>
-    <header>
+    <header class="container">
         <nav>
             <ul class="menu-horizontal">
                 <li><a href="#">Muestrario</a></li>
@@ -26,7 +26,7 @@
                 </li>
                 <div>
                     <a class="logoInicio" href="../index.html" >
-                        <img src="../assets/img/logo.png" width = "150em" height = "50em" alt="">
+                        <img src="../assets/img/logo.png" width = "250em"alt="">
                     </a>
                 </div>
                 <li><a href="./contacto.html">Contacto</a></li>
@@ -42,8 +42,7 @@
                 <img src="../assets/img/galeria 1.jpg" alt="galeria 1" class="g-img-1">
                 <img src="../assets/img/galeria 2.jpg" alt="galeria 2" class="g-img-2">
                 <img src="../assets/img/galeria 3.jpg" alt="galeria 3" class="g-img-3">
-                <div class="g-img-4">  
-                </div> 
+                <div class="g-img-4"></div> 
                 <img src="../assets/img/galeria 5.jpg" alt="galeria 5" class="g-img-5">
                 <img src="../assets/img/galeria 6.jpg" alt="galeria 6" class="g-img-6">
                 <img src="../assets/img/galeria 7.jpg" alt="galeria 7" class="g-img-7">
@@ -53,7 +52,7 @@
         </section>
     </main>
 
-    <footer>
+    <footer class="container">
         <div class="redes">
             <a href="https://www.instagram.com/moon_of_rome/" target="_blank">
                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#BC4C2A" class="bi bi-instagram" viewBox="0 0 16 16">
