--- a/pages/telas.html
+++ b/pages/telas.html
@@ -11,7 +11,7 @@
     <title>Telas</title>
 </head>
 <body>
-    <header>
+    <header class="container">
         <nav>
             <ul class="menu-horizontal">
                 <li><a href="./muestrario.html">Muestrario</a></li>
@@ -26,7 +26,7 @@
                 </li>
                 <div>
                     <a class="logoInicio" href="../index.html" >
-                        <img src="../assets/img/logo.png" width = "150em" height = "50em" alt="">
+                        <img src="../assets/img/logo.png" width = "250em"alt="">
                     </a>
                 </div>
                 <li><a href="./contacto.html">Contacto</a></li>
@@ -88,7 +88,7 @@
         </div>
     </main>
 
-    <footer>
+    <footer class="container">
         <div class="redes">
             <a href="https://www.instagram.com/moon_of_rome/" target="_blank">
                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#BC4C2A" class="bi bi-instagram" viewBox="0 0 16 16">
