--- a/pages/telas.html
+++ b/pages/telas.html
@@ -35,8 +35,8 @@
         </nav>
     </header>
 
-    <main>
-        <div id="infoTelas"  class="container">
+    <main  class="container">
+        <div id="infoTelas">
             <div class="tela">
                 <h1 class="h1Telas">Cuerina</h1>
                 <img src="../assets/img/cuerina.jpg" class="imgTela" alt="...">
