--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="./assets/img/1.png" class="d-block w-100" alt="...">
+                        <img src="./assets/img/1.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="./assets/img/2.png" class="d-block w-100" alt="...">
+                        <img src="./assets/img/2.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="./assets/img/3.png" class="d-block w-100" alt="...">
+                        <img src="./assets/img/galeria 4.jpg" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -84,12 +84,12 @@
                     <a href="./pages/muestrario.html"><img src="./assets/img/66.jpeg" class="img6"></a>
                 </div>
                 <div class="verMas">
-                    <a href="./pages/muestrario.html">Ver mas</a>
+                    <button type="button" class="btn btn-primary btn-lg btn-light">Ver mas</button>
                 </div>
             </div>
         </section>
 
-
+        
         <article id="infoInicio" class="container">
             <div class="imgInicio">
                 <img src="./assets/img/logo.png" width = "350em" height = "150em" alt="">
