--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -8,11 +8,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../sass/sobremi.css">
     <title>Sobre mi</title>
 </head>
 <body>
     <header class="container">
-        <nav>
+        <nav id="navD">
             <ul class="menu-horizontal">
                 <li><a href="./muestrario.html">Muestrario</a></li>
                 <li>
@@ -24,19 +25,56 @@
                         <li><a href="">Camuflado</a></li>
                     </ul>
                 </li>
-                <div>
+                <div class="imagenNav">
                     <a class="logoInicio" href="../index.html" >
-                        <img src="../assets/img/logo.png" width = "250em"alt="">
+                        <img src="../assets/img/logo.png" alt="logo">
                     </a>
                 </div>
                 <li><a href="./contacto.html">Contacto</a></li>
-                <li><a href="#">Sobre mi</a></li>
+                <li><a href="./sobremi.html">Sobre mi</a></li>
             </ul>
         </nav>
-    </header>
-    <main>
 
-        <div class="foto-perfil">
+        <nav id="navM" class="navbar bg-light fixed-top">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo.png" alt="logo"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                    <div class="offcanvas-header">
+                        <a href="../index.html"><img src="../assets/img/logo.png" alt="logo" width="120em"></a>
+                        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body">
+                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="./muestrario.html">Muestrario</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./contacto.html">Contactos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./sobremi.html">sobre mi</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="./pages/telas.html" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Telas</a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="./pages/telas.html">Action</a></li>
+                                    <li><a class="dropdown-item" href="./pages/telas.html">Another action</a></li>
+                                    <li><a class="dropdown-item" href="./pages/telas.html">Another action</a></li>
+                                    <li><a class="dropdown-item" href="./pages/telas.html">Something else here</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <main class="sobreMi">
+        <div class="fotoPerfil">
             <svg xmlns="http://www.w3.org/2000/svg" width="250" height="250" fill="currentColor" class="bi bi-circle-fill" viewBox="0 0 16 16">
                 <circle cx="8" cy="8" r="8"/>
             </svg>
@@ -45,8 +83,8 @@
         <div class="perfil">
             <h1>Hilda Maria Locatelli</h1>
             <hr>
-            <h2>Diseñadora de marroquineria</h2>
-            <h3>hfgkdsahgkdjashgiuasdhgiuadfguiahgaidfghaíghaiudfhgakjdshgiuafhdfgiuhsda</h3>
+            <h2>Diseñadora textil</h2>
+            <h3>Trabajos 100% autogestión, con 25 anos de trayectoria</h3>
         </div>
     </main>
 
