--- a/pages/telas.html
+++ b/pages/telas.html
@@ -12,11 +12,11 @@
 </head>
 <body>
     <header class="container">
-        <nav>
+        <nav id="navD">
             <ul class="menu-horizontal">
                 <li><a href="./muestrario.html">Muestrario</a></li>
                 <li>
-                    <a href="#">Telas</a>
+                    <a href="./telas.html">Telas</a>
                     <ul class="menu-vertical">
                         <li><a href="">Cuerina</a></li> 
                         <li><a href="">Cordura nacional</a></li>
@@ -24,18 +24,55 @@
                         <li><a href="">Camuflado</a></li>
                     </ul>
                 </li>
-                <div>
+                <div class="imagenNav">
                     <a class="logoInicio" href="../index.html" >
-                        <img src="../assets/img/logo.png" width = "250em"alt="">
+                        <img src="../assets/img/logo.png" alt="logo">
                     </a>
                 </div>
                 <li><a href="./contacto.html">Contacto</a></li>
                 <li><a href="./sobremi.html">Sobre mi</a></li>
             </ul>
         </nav>
+
+        <nav id="navM" class="navbar bg-light fixed-top">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo.png" alt="logo"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                    <div class="offcanvas-header">
+                        <a href="../index.html"><img src="../assets/img/logo.png" alt="logo" width="120em"></a>
+                        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body">
+                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="./muestrario.html">Muestrario</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./contacto.html">Contactos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./sobremi.html">sobre mi</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="./pages/telas.html" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Telas</a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="./pages/telas.html">Action</a></li>
+                                    <li><a class="dropdown-item" href="./pages/telas.html">Another action</a></li>
+                                    <li><a class="dropdown-item" href="./pages/telas.html">Another action</a></li>
+                                    <li><a class="dropdown-item" href="./pages/telas.html">Something else here</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </nav>
     </header>
 
-    <main  class="container">
+    <main class="container">
         <div id="infoTelas">
             <div class="tela">
                 <h1 class="h1Telas">Cuerina</h1>
@@ -43,15 +80,16 @@
             </div>
     
             <div class="info">
-                <h2>Caracteristicas</h2>
+                <div class="textoInfo">
+                    <h2>Caracteristicas</h2>
                     <p><b>Industria:</b> Nacional</p>
                     <p><b>Composicion:</b> 100% Poliester</p>
                     <p><b>Ancho:</b> 1.40</p>
                     <p><b>Metros x rollo:</b> 60 Metros</p>
                     <p><b>Peso x metro:</b> 400 gr el mt.</p>
                     <p><b>Espesor:</b> 300 x 300</p>
-                
-                    <h2>Colores</h2>
+                    <h3>Colores</h3>
+                </div>
                 <div class="muestraColores">
                     <div class="red">
                         <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-circle-fill" viewBox="0 0 16 16">
