--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="container">
-        <nav>
+        <nav id="navD">
             <ul class="menu-horizontal">
                 <li><a href="./pages/muestrario.html">Muestrario</a></li>
                 <li>
@@ -25,18 +25,57 @@
                         <li><a href="">Camuflado</a></li>
                     </ul>
                 </li>
-                <div>
+                <div class="imagenNav">
                     <a class="logoInicio" href="#" >
-                        <img src="./assets/img/logo.png" width = "250em"alt="">
+                        <img src="./assets/img/logo.png" alt="logo">
                     </a>
                 </div>
                 <li><a href="./pages/contacto.html">Contacto</a></li>
                 <li><a href="./pages/sobremi.html">Sobre mi</a></li>
             </ul>
         </nav>
+
+        <nav id="navM" class="navbar bg-light fixed-top">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="./index.html"><img src="./assets/img/logo.png" alt="logo"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                    <div class="offcanvas-header">
+                        <a href="./index.html"><img src="./assets/img/logo.png" alt="logo" width="120em"></a>
+                        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body">
+                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="./pages/muestrario.html">Muestrario</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./pages/contacto.html">Contactos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./pages/sobremi.html">sobre mi</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="./pages/telas.html" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Telas</a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="./pages/telas.html">Action</a></li>
+                                    <li><a class="dropdown-item" href="./pages/telas.html">Another action</a></li>
+                                    <li><a class="dropdown-item" href="./pages/telas.html">Another action</a></li>
+                                    <li><a class="dropdown-item" href="./pages/telas.html">Something else here</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </nav>
     </header>
-    <main>
-        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+
+    <main class="mainIndex">
+        <section id="carrusel">
+            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -44,13 +83,13 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="./assets/img/1.jpg" class="d-block w-100" alt="...">
+                    <img src="./assets/img/galeria 4.jpg"  alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="./assets/img/2.jpg" class="d-block w-100" alt="...">
+                    <img src="./assets/img/galeria 4.jpg"  alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="./assets/img/galeria 4.jpg" class="d-block w-100" alt="...">
+                    <img src="./assets/img/galeria 4.jpg"  alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -61,9 +100,12 @@
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
-        </div>
+            </div>
+        </section>
+
         <h2 class="productosIndex">Productos realizados</h2>
-        <section  id="muestraInicio"  class="container">
+
+        <section id="muestraInicio">
             <div class="galeriaInicio">
                 <div class="muestra">
                     <a href="./pages/muestrario.html"><img src="./assets/img/11.jpeg" class="img1"></a>
@@ -92,16 +134,16 @@
         
         <article id="infoInicio" class="container">
             <div class="imgInicio">
-                <img src="./assets/img/logo.png" width = "350em" height = "150em" alt="">
+                <img src="./assets/img/logo.png" width = "400em" height = "auto" alt="">
             </div>
             <div class="textoInicio">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing
-                lit. Magfasfasfani numquam reprehenderit officia laborum fugiat voluptates, ullam autem ratione vel, ducimus aliquid! Inventore ipsum, rerum doloremque et odio sed maxime ex!
-                </p>
+                <h1>Bolsos - Mochilas - Accesorios</h1>
+                <p>Diseño y fabricacion originales</p>
                 
             </div>
         </article>
     </main>
+
     <footer class="container">
         <div class="redes">
             <a href="https://www.instagram.com/moon_of_rome/" target="_blank">
@@ -123,6 +165,7 @@
             </a>
         </div>
     </footer>
+
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script> AOS.init(); </script>
     <!-- JavaScript Bundle with Popper -->
