pag sobremi con sass terminada, ajustes en media, aplique cosas de CEO

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
     <title>Moon of rome - Inicio</title>
+    <meta name="description" content="Diseño y fabricacion textil.">
+    <meta name="keywords" content="mochilas, carteras, marroquineria, telas">
     
 </head>
 <body>
@@ -83,13 +85,13 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                    <img src="./assets/img/galeria 4.jpg"  alt="...">
+                    <img src="./assets/img/galeria 4.jpg" alt="...">
                     </div>
                     <div class="carousel-item">
-                    <img src="./assets/img/galeria 4.jpg"  alt="...">
+                    <img src="./assets/img/galeria 4.jpg" alt="...">
                     </div>
                     <div class="carousel-item">
-                    <img src="./assets/img/galeria 4.jpg"  alt="...">
+                    <img src="./assets/img/galeria 4.jpg" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -126,8 +128,9 @@
                     <a href="./pages/muestrario.html"><img src="./assets/img/66.jpeg" class="img6"></a>
                 </div>
                 <div class="verMas">
-                    <button type="button" class="btn btn-primary btn-lg btn-light">Ver mas</button>
-                </div>
+                    <a href="./pages/muestrario.html"><button type="button" class="btn btn-primary btn-lg btn-light">Ver mas</button>
+                    </a>
+                    </div>
             </div>
         </section>
 
