--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -9,6 +9,8 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
     <title>Contactos</title>
+    <meta name="description" content="Diseño y fabricacion textil.">
+    <meta name="keywords" content="mochilas, carteras, marroquineria, telas">
 </head>
 <body>
     <header class="container">
