--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -8,8 +8,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="../sass/sobremi.css">
+    <link rel="stylesheet" href="../sass/main.css">
     <title>Sobre mi</title>
+    <meta name="description" content="Diseño y fabricacion textil.">
+    <meta name="keywords" content="mochilas, carteras, marroquineria, telas">
 </head>
 <body>
     <header class="container">
@@ -74,17 +76,20 @@
     </header>
 
     <main class="sobreMi">
-        <div class="fotoPerfil">
-            <svg xmlns="http://www.w3.org/2000/svg" width="250" height="250" fill="currentColor" class="bi bi-circle-fill" viewBox="0 0 16 16">
-                <circle cx="8" cy="8" r="8"/>
-            </svg>
+        <div class="foto">
+            <img src="../assets/img/sobre mi.png" alt="costura"> 
         </div>
 
         <div class="perfil">
-            <h1>Hilda Maria Locatelli</h1>
+            <h2>Hilda Maria Locatelli</h2>
             <hr>
-            <h2>Diseñadora textil</h2>
-            <h3>Trabajos 100% autogestión, con 25 anos de trayectoria</h3>
+            <h1>Productora textil</h1>
+            <div class="descripcion">
+                <h3>Trabajos 100% autogestión con mas de 20 anos de trayectoria.
+                Diseños urbanos y dedicado en la comodidad y seguridad
+                en tus viajes.
+                </h3>
+            </div>
         </div>
     </main>
 
