implementacion de imagenes,correccin de tamaños y correccion de navM

--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -39,7 +39,7 @@
 
         <nav id="navM" class="navbar bg-light fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo.png" alt="logo"></a>
+                <a class="navbar" href="../index.html"><img src="../assets/img/logo.png" alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
