--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <nav id="navM" class="navbar bg-light fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand" href="./index.html"><img src="./assets/img/logo.png" alt="logo"></a>
+                <a class="navbar" href="./index.html"><img src="./assets/img/logo.png" alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -84,14 +84,20 @@
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
                 </div>
                 <div class="carousel-inner">
-                    <div class="carousel-item active">
-                    <img src="./assets/img/galeria 4.jpg" alt="...">
+                    <div class="carousel-item active" >
+                            <img src="./assets/img/carru-1.svg" alt="bienvenida a mi web">
                     </div>
+
                     <div class="carousel-item">
-                    <img src="./assets/img/galeria 4.jpg" alt="...">
+                        <a href="https://www.facebook.com/profile.php?id=100068758916134" target="_blank">
+                            <img src="./assets/img/carru-2.svg" alt="feria mundialito">
+                        </a>
                     </div>
+
                     <div class="carousel-item">
-                    <img src="./assets/img/galeria 4.jpg" alt="...">
+                        <a href="./pages/muestrario.html" target="_blank">
+                            <img src="./assets/img/carru-3.svg" alt="propuesta para ver mas productos">
+                        </a>
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -110,22 +116,22 @@
         <section id="muestraInicio">
             <div class="galeriaInicio">
                 <div class="muestra">
-                    <a href="./pages/muestrario.html"><img src="./assets/img/11.jpeg" class="img1"></a>
+                    <a href="./pages/muestrario.html"><img src="./assets/img/img-index-1.png" class="img1"></a>
                 </div>
                 <div class="muestra">
-                    <a href="./pages/muestrario.html"><img src="./assets/img/22.jpeg" class="img2"></a>
+                    <a href="./pages/muestrario.html"><img src="./assets/img/img-index-2.png" class="img2"></a>
                 </div>
                 <div class="muestra">
-                    <a href="./pages/muestrario.html"><img src="./assets/img/33.jpeg" class="img3"></a>
+                    <a href="./pages/muestrario.html"><img src="./assets/img/img-index-3.png" class="img3"></a>
                 </div>
                 <div class="muestra">
-                    <a href="./pages/muestrario.html"><img src="./assets/img/44.jpeg" class="img4"></a>
+                    <a href="./pages/muestrario.html"><img src="./assets/img/img-index-4.png" class="img4"></a>
                 </div>
                 <div class="muestra">
-                    <a href="./pages/muestrario.html"><img src="./assets/img/55.jpeg" class="img5"></a>
+                    <a href="./pages/muestrario.html"><img src="./assets/img/img-index-5.png" class="img5"></a>
                 </div>
                 <div class="muestra">
-                    <a href="./pages/muestrario.html"><img src="./assets/img/66.jpeg" class="img6"></a>
+                    <a href="./pages/muestrario.html"><img src="./assets/img/img-index-6.png" class="img6"></a>
                 </div>
                 <div class="verMas">
                     <a href="./pages/muestrario.html"><button type="button" class="btn btn-primary btn-lg btn-light">Ver mas</button>
@@ -135,16 +141,7 @@
         </section>
 
         
-        <article id="infoInicio" class="container">
-            <div class="imgInicio">
-                <img src="./assets/img/logo.png" width = "400em" height = "auto" alt="">
-            </div>
-            <div class="textoInicio">
-                <h1>Bolsos - Mochilas - Accesorios</h1>
-                <p>Diseño y fabricacion originales</p>
-                
-            </div>
-        </article>
+
     </main>
 
     <footer class="container">
